<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.rasapishe.customer.screen.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/inc_appbarlayout"/>

        <ImageView
            android:id="@+id/ad_pager"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:adjustViewBounds="true"
            android:src="@drawable/cafe_raees"
            />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/business_name_cafe_raees"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.SearchView
            android:id="@+id/searchview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:layout_weight="5"
            android:background="#e9dede"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <Button
                    android:id="@+id/showReceipt"
                    style="@style/BtnRaised"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/md_amber_700"
                    android:drawableLeft="@mipmap/ic_nearby"
                    android:onClick="onCliclShowReceipt"
                    android:text="@string/title_factor"
                    android:textSize="24sp"
                    android:theme="@style/BtnRaised.color2"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <Button
                    android:id="@+id/cutomer_management"
                    style="@style/BtnRaised"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/md_cyan_700"
                    android:drawableLeft="@mipmap/ic_all_business"
                    android:drawablePadding="10dp"
                    android:text="@string/customer_management"
                    android:textSize="24sp"
                    android:theme="@style/BtnRaised.color2"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <Button
                    android:id="@+id/financial_reports"
                    style="@style/BtnRaised"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/md_red_800"
                    android:drawableLeft="@mipmap/ic_my_business"
                    android:drawablePadding="10dp"
                    android:text="@string/financial_reports"
                    android:textSize="24sp"
                    android:theme="@style/BtnRaised.color2"/>

            </TableRow>
        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>